@@ -395,9 +395,10 @@ class tx_srfreecap_pi1 extends tslib_pibase {
 	}
 	
 	function sendImage($pic) {
-			// output image with appropriate headers
-		header(base64_decode("WC1DYXB0Y2hhOiBmcmVlQ2FwIDEuNCAtIHd3dy5wdXJlbWFuZ28uY28udWs="));
+			// Output image with appropriate headers
 		header('Expires: Mon, 26 Jul 1997 05:00:00 GMT');
+		header('Pragma: no-cache');
+		header('Cache-Control: no-cache, no-store, must-revalidate');
 		switch($this->output) {
 			// add other cases as desired
 			case "jpg":
